pushing frondend code

--- a/src/app/home_page/contactus/contactus.component.html
+++ b/src/app/home_page/contactus/contactus.component.html
@@ -5,13 +5,21 @@
 
 <section id="contactus">
 
-  <agm-map [latitude]="lat" [longitude]="lng"></agm-map>
+  <!-- <agm-map [latitude]="lat" [longitude]="lng"></agm-map> -->
 
-
-  <div class="contactus_map">
+  <!-- <div class="contactus_map">
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1inmlUTbyte6p8GfBEYnv7XWdAWqnkbxF" width="100%"
       height="480"></iframe>
-  </div>
+  </div> -->
+
+
+  <iframe
+  width="100%"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDCmDnWPXKL0ZeIyYhtqPz31-UgaWOn1mM
+    &q=13.3230,76.8568&zoom=12" allowfullscreen>
+</iframe>
 
 
   <div class="contactus_body">
