--- a/src/app/home_page/header/header.component.css
+++ b/src/app/home_page/header/header.component.css
@@ -1,56 +1,87 @@
+.overlay-content{
+  margin-top: 70px;
+}
 .overlay {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 9999;
-    top: 0;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0.85);
-    background-color: rgba(255, 255, 255, 0.85);
-    overflow-x: hidden;
-    transition: 0.5s;
-  }
-  
-  .overlay-content {
-    position: relative;
-    top: 5%;
-    width: 100%;
-    text-align: left;
-    margin-top: 30px;
-    margin-left: 10px;
-  }
-  
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  right: 0;
+  background-color: rgb(255, 255, 255);
+  overflow-x: hidden;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  box-shadow: -5px 0px 14px 6px #0000005e;
+}
+
+.overla y-content {
+  position: relative;
+  top: 5%;
+  width: 100%;
+  text-align: left;
+  margin-top: 30px;
+  margin-left: 10px;
+}
+
+.overlay a {
+  padding: 10px 0px 10px 25px;
+  text-decoration: none;
+  font-size: 15px;
+  color: #423939;
+  display: block;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-bottom: 1px solid #d76b4f2e;
+}
+
+.overlay a:hover,
+.overlay a:focus,
+.overlay a.active{
+  color: #d76b4f;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 24px;
+  font-size: 25px;
+  background-color: #423939;
+  border-radius: 100%;
+  padding: 0px 10px 0px 10px;
+  box-shadow: 0px 2px 3px 2px #00000024;
+  color: #d76b4f;
+}
+
+.overlay .closebtn:hover {
+  color: #d76b4f;
+}
+
+
+.navMenuShow .overlay,
+.navMenuShow .hamburgerMenu {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  visibility: hidden;
+  /* display: none; */
+}
+
+.navMenuHide .navhidehelper{
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  visibility: hidden;
+  /* display: none; */
+}
+
+
+@media screen and (max-height: 450px) {
   .overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
+    font-size: 20px
   }
-  
-  .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-  }
-  
+
   .overlay .closebtn {
-    position: absolute;
-    top: 11px;
-    left: 11px;
-    font-size: 25px;
-    background-color: #ff9a75;
-    border-radius: 100%;
-    padding: 0px 10px 0px 10px;
-    box-shadow: 0px 2px 3px 2px #00000024;
-
-
-  }
-  
-  @media screen and (max-height: 450px) {
-    .overlay a {font-size: 20px}
-    .overlay .closebtn {
     font-size: 40px;
     top: 15px;
     right: 35px;
-    }
   }
+}
